test with proj1and2
