# greet-name-service/openapi.yaml
@@ -48,6 +48,42 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /greeter/greetGoProj:
+    get:
+      summary: Get a greeting message using plain request
+      description: Makes a plain request to retrieve a greeting message from the Go-proj1 service.
+      responses:
+        '200':
+          description: Successfully returns a greeting message.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Hello, chira :from proj!"
+        '500':
+          description: Error occurred while processing the request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /greeter/greetGoProj2:
+    get:
+      summary: Get a greeting message using plain request
+      description: Makes a plain request to retrieve a greeting message from the Go-proj2 service.
+      responses:
+        '200':
+          description: Successfully returns a greeting message.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Hello, chira :from proj2!"
+        '500':
+          description: Error occurred while processing the request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   securitySchemes:
